<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Neko 12</string>
    <string name="app_name_neko">Neko</string>
    <string name="dynamic_color">Dynamic colors</string>
    <string name="dynamic_color_sub">Automatically select an accent color based on the color of your wallpaper. Work only on Android 12+</string>
    <string name="oobe_title">Welcome to Neko 12!</string>
    <string name="oobe_message">Hello!</string>
	<string name="choosetheme">Choose accent color</string>
	<string name="dark_theme_auto">Auto dark theme</string>
	<string name="dark_theme_auto_sub">If dark theme is enabled on your device, the app will adapt automatically</string>
    <string name="hello">Hello!</string>
    <string name="back">Back</string>
    <string name="letsgo">Let\'s Go!</string>
    <string name="stopoobe">No, thanks</string>
    <string name="notification_name">Neko 12</string>
    <string name="promo">Promo code</string>
    <string name="promo_condition">In this menu, you can enter a promotional code from the developer, which gives a reward</string>
    <string name="entercode">Enter the promo code in the text box below:</string>
    <string name="promo_successfully">Successfully!</string>
    <string name="promo_successfully_message">You entered the code from the developer and got a cat. This promo code is no longer available for you!</string>
    <string name="promo_nosuccessfully">Error!</string>
    <string name="promo_nosuccessfully_message">The entered code is expired or already used!</string>
    <string name="notification_channel_name">New cats</string>
    <string name="default_tile_name">\????</string>
    <string name="notification_title">A cat is here.</string>
    <string name="notification_title_return">A cat has returned.</string>
    <string name="default_cat_name">Cat #%s</string>
    <string name="directory_name">Cats</string>
    <string name="confirm_delete">Forget %s?</string>
    <string name="cat_controls">Cat Controls</string>
    <string name="collection">Collection</string>
    <string name="control_toy_title">Toy</string>
    <string name="control_toy_subtitle">Tap to use</string>
    <string name="control_toy_status">Cat attracted!</string>
    <string name="control_water_title">Water bubbler</string>
    <string name="control_water_subtitle">Click to fill</string>
    <string name="control_food_title">Food bowl</string>
    <string name="control_food_subtitle">Tap to refill</string>
    <string name="control_food_status_full">Full</string>
    <string name="control_food_status_empty">Empty</string>
    <string name="settings">Settings</string>
    <string name="cat_counter">You collect %d cat\'s!</string>
    <string name="check_updates">Check for update\'s</string>
	<string name="choosetheme_sub">You will need to restart the application</string>
    <string name="about_neko">About Neko</string>
    <string name="help">Help</string>
	<string name="achievements">Achievements</string>
    <string name="help_message">Welcome to Neko! For start play click Cat Controls on bottom bar and fill all tiles. Then close app. If cat arrive, I send you notification. After you cat send cat your friends, or continue collect cats. Do not forget check tiles, because after arrive cat\'s eat your food and drink water. Good luck!  </string>
    <string name="update_message">You are using beta version of Neko. Check update from Telegram channel</string>
    <string name="themechanged">Theme successfully changed, but you need to restart the application for the changes to take effect.</string>
    <string name="later">Later</string>
    <string name="restart">Restart</string>
    <string name="success">Success</string>
    <string name="cats_here_tip">Your cats will be here. Click for hide tip</string>
    <string name="water_state_ml">%.0f mL</string>
    <string name="dark_theme">Enable dark theme</string>
    <string name="compact_view">Use compact view in Cat Controls</string>
    <string name="accent_choose">Choose accent color</string>
    <string name="open_settings">Open settings in system</string>
    <string name="deprecated_android_v">Your version android is deprecated, in future releases Neko 11 can unsupported older version. Enabled Compat Mode. Please, install custom ROM, or update your phone. </string>
    <string name="meow_meow">Meow Meow.</string>
    <string name="permission_denied">I can\'t save picture, because permission denied. Please try again.</string>
    <string name="picture_saved_successful">Picture %s saved in /Pictures/Cats/. You can see it in gallery app.</string>
    <string name="about_text">ABOUT TEXT</string>
	<string name="about_dev1">dimon6018 (queuejw) - probably did the biggest job thanks to him</string>
	<string name="about_dev2">AlertKaput - help finding bugs</string>
	<string name="about_dev3">MG30 - cool ideas, help finding bugs, and test first alpha versions</string>
	<string name="about_dev4">ZaCCCP- help finding bugs, аnd test dynamic colors</string>
	<string name="rename_cat_title">Rename this cat!</string>
    <string name="input_sub">Type name here</string>
	<string name="openurl">Open Telegram</string>
    <string name="update_toast">Download update, if it available</string>
    <string name="return_to_collection">Return to collection</string>
    <string name="email">Send message about the bugs: t.me/cackemcthecat</string>
	<string name="get">Get gift</string>
	<string name="welcome_dialog">Welcome to Neko11.</string>
	<string name="save_title">Save</string>
	<string name="del_title">Delete</string>
	<string name="rename_title">Rename</string>
	<string name="cat_status_string">Cat status: %s</string>
	<string name="input_sub_promo">Type promo</string>
        <string name="about_dev5">DarkFox - testing first versions and first collect 100 cats</string>
	
	<string name="sort_standart">Standart</string>
	<string name="sort_color">By color</string>
	<string name="sort_name">By name</string>
	<string name="sort_title">Cat sorting</string>
	
	<string name="pink">Pink</string>
	<string name="red">Red</string>
	<string name="orange">Yellow</string>
	<string name="green">Green</string>
	<string name="lime">Lime</string>
	<string name="aqua">Turquoise</string>
	<string name="blue">Blue</string>
	<string name="purple">Purple</string>
	
    <string-array name="food_names">
        <item>Empty dish</item>
        <item>Bits</item>
        <item>Fish</item>
        <item>Chicken</item>
        <item>Treat</item>
    </string-array>
    <array name="food_icons">
        <item>@drawable/food_dish</item>
        <item>@drawable/food_bits</item>
        <item>@drawable/food_sysuituna</item>
        <item>@drawable/food_chicken</item>
        <item>@drawable/food_donut</item>
    </array>
    <integer-array name="food_intervals">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </integer-array>
    <integer-array name="food_new_cat_prob">
        <item>0</item>
        <item>5</item>
        <item>35</item>
        <item>65</item>
        <item>90</item>
    </integer-array>
    <string-array name="cat_messages">
        <item>😸</item>
        <item>😹</item>
        <item>😺</item>
        <item>😻</item>
        <item>😼</item>
        <item>😽</item>
        <item>😾</item>
        <item>😿</item>
        <item>🙀</item>
        <item>💩</item>
        <item>🐁</item>
    </string-array>
    <string-array name="rare_cat_messages">
        <item>🍩</item>
        <item>🍭</item>
        <item>🍫</item>
        <item>🍨</item>
        <item>🔔</item>
        <item>🐝</item>
        <item>🍪</item>
        <item>🥧</item>
    </string-array>
	<string-array name="cat_status">
        <item>Common</item>
        <item>Bully</item>
        <item>Darling</item>
        <item>Glutton</item>
		<item>Playful</item>
		<item>Lazy</item>
		<item>Wild</item>
    </string-array>
</resources>
