<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NekoSettingsFragment"
    android:orientation="vertical">

      <com.google.android.material.materialswitch.MaterialSwitch
        android:text="@string/dark_theme"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        android:id="@+id/white_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
		
    	<com.google.android.material.materialswitch.MaterialSwitch
        android:text="@string/dark_theme_auto"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        android:id="@+id/white_switch_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
		
	 <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dark_theme_auto_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme_auto_sub"
        android:textSize="12sp"
		android:layout_marginStart="5dp"
        app:fontFamily="@font/opensans_regular" />
     <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0" />

     <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/linear_controls_enable"
        android:layout_width="match_parent"
        android:layout_marginStart="5dp"
        android:layout_height="wrap_content"
        android:text="@string/compact_view"
        android:textSize="18sp" />

     <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0" />
		]
	 <com.google.android.material.button.MaterialButton
        android:id="@+id/choosetheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choosetheme"
        app:icon="@drawable/ic_brush" />
		
	<com.google.android.material.textview.MaterialTextView
        android:id="@+id/choosetheme_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:gravity="center"
        android:text="@string/choosetheme_sub"
        android:textSize="12sp"
		android:layout_marginStart="5dp"
        app:fontFamily="@font/opensans_regular" />
		
     <com.google.android.material.materialswitch.MaterialSwitch
        android:text="@string/dynamic_color"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        android:id="@+id/dynamic_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
		
     <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dyncolor_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_color_sub"
        android:textSize="12sp"
		android:layout_marginStart="5dp"
        app:fontFamily="@font/opensans_regular" />
     <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0" />
				
     <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/sortgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
		app:singleSelection="true">
		<Button
		 style="?attr/materialButtonOutlinedStyle"
		 android:id="@+id/sortcolor"
		 android:layout_width="wrap_content"
         android:layout_height="wrap_content"
		 android:text="@string/sort_color"/>
		<Button
		 style="?attr/materialButtonOutlinedStyle"
		 android:id="@+id/sortname"
		 android:layout_width="wrap_content"
         android:layout_height="wrap_content"
		 android:text="@string/sort_name"/>
	    <Button
		 style="?attr/materialButtonOutlinedStyle"
		 android:id="@+id/sortstandart"
		 android:layout_width="wrap_content"
         android:layout_height="wrap_content"
		 android:text="@string/sort_standart"/>
	</com.google.android.material.button.MaterialButtonToggleGroup>
	
	<com.google.android.material.textview.MaterialTextView
        android:id="@+id/sorttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:gravity="center"
        android:text="@string/sort_title"
        android:textSize="12sp"
		android:layout_marginStart="5dp"
        app:fontFamily="@font/opensans_regular" />
		
	<Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0" />
		
	<com.google.android.material.button.MaterialButton
        android:id="@+id/opensettingsbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/open_settings"
        app:icon="@drawable/ic_open_in" />

	<TextView
		android:id="@+id/androidwarning"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="Enable Compat Mode" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1" />
		
     <com.google.android.material.textview.MaterialTextView
          android:id="@+id/ver_num"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="right" />
			
</LinearLayout>