<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:srcCompat="@drawable/ic_fullcat_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/abouttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:gravity="center"
        app:fontFamily="@font/opensans_medium"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/abouttext"
	android:textSize="20sp"
	android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/about_text" />
	<Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0" />
		
	 <com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_dev1"
        android:layout_width="match_parent"
		android:layout_marginStart="5dp"
        android:layout_height="match_parent"
        android:text="@string/about_dev1" />
		<Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0" />
	<com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_dev2"
        android:layout_width="match_parent"
		android:layout_marginStart="5dp"
        android:layout_height="match_parent"
        android:text="@string/about_dev2" />
		<Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0" />
	<com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_dev3"
        android:layout_width="match_parent"
		android:layout_marginStart="5dp"
        android:layout_height="match_parent"
        android:text="@string/about_dev3" />
		<Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0" />
	<com.google.android.material.textview.MaterialTextView
        android:id="@+id/about_dev4"
        android:layout_width="match_parent"
		android:layout_marginStart="5dp"
        android:layout_height="match_parent"
        android:text="@string/about_dev4" />
        <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0" />
        <com.google.android.material.textview.MaterialText
        android:id="@+id/about_dev5"
        android:layout_width="match_parent"
                android:layout_marginStart="5dp"
        android:layout_height="match_parent"
        android:text="@string/about_dev5" />
</LinearLayout>
